--- a/index.html
+++ b/index.html
@@ -1,99 +1,36 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abertura de Chamado de Suporte</title>
-    <style>
-        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background-color: #f4f7f9; margin: 0; padding: 20px; display: flex; justify-content: center; align-items: center; min-height: 100vh; }
-        .container { background-color: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); max-width: 500px; width: 100%; }
-        h1 { color: #1a202c; text-align: center; margin-bottom: 25px; }
-        .form-group { margin-bottom: 15px; }
-        label { display: block; font-weight: 600; color: #4a5568; margin-bottom: 5px; }
-        input, select, textarea { width: 100%; padding: 10px; border: 1px solid #cbd5e0; border-radius: 4px; box-sizing: border-box; font-size: 16px; }
-        textarea { resize: vertical; min-height: 100px; }
-        button { width: 100%; padding: 12px; background-color: #4299e1; color: white; border: none; border-radius: 4px; font-size: 16px; font-weight: 600; cursor: pointer; transition: background-color 0.2s; }
-        button:hover { background-color: #3182ce; }
-        #message { text-align: center; margin-top: 20px; font-weight: 600; }
-        .success { color: #38a169; }
-        .error { color: #e53e3e; }
-    </style>
+    <title>Abertura de Chamados - ClickUp</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Abrir Chamado de Suporte</h1>
-        <form id="ticketForm">
-            <div class="form-group">
-                <label for="solicitante">Seu Nome (Solicitante)</label>
-                <input type="text" id="solicitante" name="solicitante" required>
-            </div>
-            <div class="form-group">
-                <label for="titulo">Título do Chamado</label>
-                <input type="text" id="titulo" name="titulo" required>
-            </div>
-            <div class="form-group">
-                <label for="prioridade">Prioridade</label>
-                <select id="prioridade" name="prioridade" required>
-                    <option value="3">Normal</option>
-                    <option value="2">Alta</option>
-                    <option value="1">Urgente</option>
-                    <option value="4">Baixa</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="descricao">Descrição do Problema</label>
-                <textarea id="descricao" name="descricao" required></textarea>
-            </div>
-            <button type="submit">Abrir Chamado</button>
+        <h1>Abrir Novo Chamado no ClickUp</h1>
+
+        <form id="chamadoForm">
+            <h2>Detalhes do Chamado</h2>
+            <label for="taskTitle">Título do Chamado:</label>
+            <input type="text" id="taskTitle" required>
+
+            <label for="taskDescription">Descrição:</label>
+            <textarea id="taskDescription" rows="4"></textarea>
+
+            <label for="taskPriority">Prioridade:</label>
+            <select id="taskPriority">
+                <option value="4">Baixa</option>
+                <option value="3" selected>Normal</option>
+                <option value="2">Alta</option>
+                <option value="1">Urgente</option>
+            </select>
+
+            <button type="submit" id="submitBtn">Criar Chamado</button>
         </form>
-        <div id="message"></div>
+
+        <div id="status"></div>
     </div>
-
-    <script>
-    const form = document.getElementById('ticketForm');
-    const messageDiv = document.getElementById('message');
-    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbykL7JJwX5u_RH4Snm7ADSk05snbeFHWo6cSZulONlPGirtciSJLvARHX_GIPvOazvgyQ/exec"; // Vamos gerar uma nova URL no final
-
-    form.addEventListener('submit', function(e) {
-        e.preventDefault();
-        
-        const submitButton = this.querySelector('button');
-        submitButton.disabled = true;
-        submitButton.textContent = 'Enviando chamado...';
-        messageDiv.textContent = '';
-
-        // Converte os dados do formulário para um objeto simples
-        const formData = new FormData(form);
-        const data = Object.fromEntries(formData.entries());
-
-        // A MUDANÇA ESTÁ AQUI: Enviamos os dados como texto puro (JSON)
-        // Isso evita o erro de redirecionamento do Google
-        fetch(SCRIPT_URL, {
-            method: 'POST',
-            headers: {
-              'Content-Type': 'text/plain;charset=utf-8',
-            },
-            body: JSON.stringify(data)
-        })
-        .then(response => response.json())
-        .then(data => {
-            if (data.result === 'success') {
-                messageDiv.className = 'success';
-                messageDiv.textContent = '✅ Chamado aberto com sucesso!';
-                form.reset();
-            } else {
-                throw new Error(data.message || 'Ocorreu um erro desconhecido.');
-            }
-        })
-        .catch(error => {
-            messageDiv.className = 'error';
-            messageDiv.textContent = '❌ Erro ao abrir chamado: ' + error.message;
-        })
-        .finally(() => {
-            submitButton.disabled = false;
-            submitButton.textContent = 'Abrir Chamado';
-        });
-    });
-</script>
+    <script src="script.js"></script>
 </body>
 </html>
