--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
         <form id="chamadoForm">
             <h2>Detalhes do Chamado</h2>
+            
+            <label for="taskRequester">Solicitante:</label>
+            <input type="text" id="taskRequester" required placeholder="Ex: Maria da recepção">
+
             <label for="taskTitle">Título do Chamado:</label>
             <input type="text" id="taskTitle" required>
 
