--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2>Detalhes do Chamado</h2>
             
             <label for="taskRequester">Solicitante:</label>
-            <input type="text" id="taskRequester" required placeholder="Ex: Maria da recepção">
+            <input type="text" id="taskRequester" required>
 
             <label for="taskTitle">Título do Chamado:</label>
             <input type="text" id="taskTitle" required>
