ajuste na infra

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 <option value="1">Urgente</option>
             </select>
 
-            <button type="submit" id="submitBtn">Criar Chamado</button>
+            <button type="submit" id="submit">Criar Chamado</button>
         </form>
 
-        <div id="status"></div>
+        <p id="status-envio"></p>
     </div>
     <script src="script.js"></script>
 </body>
